[gd_scene load_steps=22 format=3 uid="uid://33h1djjvcru4"]

[ext_resource type="Texture2D" uid="uid://c47xpbj12x1kw" path="res://Art/Backgrounds/menu background/menu background .png" id="1_i7jfy"]
[ext_resource type="Script" path="res://Scripts/Main menu/Start Menu/Load Game Menu/load_game_menu.gd" id="1_pytk2"]
[ext_resource type="Script" path="res://Scripts/Start Scene/CloudScript.gd" id="2_1h8eh"]
[ext_resource type="Texture2D" uid="uid://ca1bshnt3utr5" path="res://Art/Backgrounds/menu background/menu clouds.png" id="3_tp0ng"]
[ext_resource type="Theme" uid="uid://b78i1nbh81d5p" path="res://Theme.tres" id="4_dwt3d"]
[ext_resource type="Texture2D" uid="uid://d2mw3ncvje0v3" path="res://Art/Tech/Load game menu/lg menu.png" id="5_1rq2l"]
[ext_resource type="Texture2D" uid="uid://ds3nvmoip4oe8" path="res://Art/Tech/back_forward.png" id="6_avc72"]
[ext_resource type="PackedScene" uid="uid://1cr6veqtiy1q" path="res://Scenes/fps_counter.tscn" id="6_srw5d"]
[ext_resource type="Script" path="res://Scripts/Main menu/Start Menu/New Game Menu/CCBackButton.gd" id="7_jiu2e"]
[ext_resource type="Texture2D" uid="uid://d0x1u68lyi8ya" path="res://Art/Tech/GUI/GUI.png" id="10_vmrav"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0s87k"]
atlas = ExtResource("1_i7jfy")
region = Rect2(1920, 0, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_bly3u"]
atlas = ExtResource("1_i7jfy")
region = Rect2(1440, 0, 480, 540)

[sub_resource type="AtlasTexture" id="AtlasTexture_s01tc"]
atlas = ExtResource("3_tp0ng")
region = Rect2(0, 0, 960, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gxiv"]
atlas = ExtResource("1_i7jfy")
region = Rect2(960, 0, 480, 540)

[sub_resource type="Animation" id="Animation_w5flg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_68d4i"]
resource_name = "pressed"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x2nx5"]
_data = {
"RESET": SubResource("Animation_w5flg"),
"pressed": SubResource("Animation_68d4i")
}

[sub_resource type="Animation" id="Animation_p34vn"]
resource_name = "fade_in"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.054902, 0.00392157, 0.0862745, 1), Color(0.054902, 0.00392157, 0.0862745, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_p3crg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.054902, 0.00392157, 0.0862745, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l4yu8"]
resource_name = "fade_out"
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.054902, 0.00392157, 0.0862745, 0), Color(0.054902, 0.00392157, 0.0862745, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wt3il"]
_data = {
"RESET": SubResource("Animation_p3crg"),
"fade_in": SubResource("Animation_p34vn"),
"fade_out": SubResource("Animation_l4yu8")
}

[node name="loading" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pytk2")

[node name="CanvasLayer" parent="." instance=ExtResource("6_srw5d")]

[node name="Camera and BG" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="Camera and BG"]

[node name="Sun" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
position = Vector2(240, 270)

[node name="Sun" type="Sprite2D" parent="Camera and BG/ParallaxBackground/Sun"]
position = Vector2(-240, -270)
texture = SubResource("AtlasTexture_0s87k")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 480, 288)

[node name="BG Trees" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
position = Vector2(240, 270)

[node name="BG Trees" type="Sprite2D" parent="Camera and BG/ParallaxBackground/BG Trees"]
position = Vector2(-240, -259)
texture = SubResource("AtlasTexture_bly3u")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 480, 309)

[node name="Clouds" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
visible = false
texture_filter = 1
texture_repeat = 2
position = Vector2(240, 270)
motion_mirroring = Vector2(980, 0)
script = ExtResource("2_1h8eh")

[node name="Clouds" type="Sprite2D" parent="Camera and BG/ParallaxBackground/Clouds"]
texture_filter = 1
texture_repeat = 2
position = Vector2(213, -156)
texture = SubResource("AtlasTexture_s01tc")
region_enabled = true
region_rect = Rect2(0, 0, 1431, 270)

[node name="Mountains" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
position = Vector2(240, 270)

[node name="Mountains" type="Sprite2D" parent="Camera and BG/ParallaxBackground/Mountains"]
position = Vector2(-240, -254)
texture = SubResource("AtlasTexture_0gxiv")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 480, 304)

[node name="Trees And Lake" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
position = Vector2(240, 270)

[node name="Earth" type="ParallaxLayer" parent="Camera and BG/ParallaxBackground"]
position = Vector2(240, 270)

[node name="Camera2D" type="Camera2D" parent="Camera and BG"]
position = Vector2(240, 160)
zoom = Vector2(0.5, 0.5)
drag_top_margin = 0.29

[node name="AU menu" type="Sprite2D" parent="."]
position = Vector2(81, 67)
texture = ExtResource("5_1rq2l")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 337, 207)

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 370.0
offset_top = 81.0
offset_right = 385.0
offset_bottom = 96.0

[node name="Back" type="Sprite2D" parent="BackButton"]
texture = ExtResource("6_avc72")
centered = false
hframes = 2
region_enabled = true
region_rect = Rect2(0, 0, 30, 16)
script = ExtResource("7_jiu2e")

[node name="BackButtonAnimation" type="AnimationPlayer" parent="BackButton/Back"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_x2nx5")
}

[node name="Timer" type="Timer" parent="BackButton/Back"]
wait_time = 0.2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 117.0
offset_top = 95.0
offset_right = 366.0
offset_bottom = 232.0
theme = ExtResource("4_dwt3d")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
clip_contents = true
custom_minimum_size = Vector2(238, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="Gui" type="Sprite2D" parent="."]
position = Vector2(362, 95)
texture = ExtResource("10_vmrav")
centered = false
region_enabled = true
region_rect = Rect2(480, 132, 55, 59)

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -51.0
offset_top = -12.0
offset_right = 513.0
offset_bottom = 329.0
color = Color(0.054902, 0.00392157, 0.0862745, 1)

[node name="Animation" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_wt3il")
}

[connection signal="ready" from="Camera and BG/ParallaxBackground/Clouds/Clouds" to="Camera and BG/ParallaxBackground/Clouds" method="_on_clouds_ready"]
[connection signal="pressed" from="BackButton" to="BackButton/Back" method="_on_back_button_pressed"]
[connection signal="timeout" from="BackButton/Back/Timer" to="BackButton/Back" method="_on_timer_timeout"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
